Changed Report Name and Added Content for LSTM Introduction.

--- a/references.bib
+++ b/references.bib
@@ -18,13 +18,13 @@
   year={2008},
   publisher={Springer New York}
 }
-@article{bro2014principal,
-  title={Principal component analysis},
-  author={Bro, Rasmus and Smilde, Age K},
-  journal={Analytical methods},
-  volume={6},
-  number={9},
-  pages={2812--2831},
-  year={2014},
-  publisher={Royal Society of Chemistry}
+@article{LSTMreview,
+  title={A review on the long short-term memory model},
+  author={Van Houdt, G., Mosquera, C., & Nápoles, G.},
+  journal={Artificial Intelligence Review},
+  volume={53},
+  number={53},
+  pages={5929--5955},
+  year={2020},
+  publisher={Springer New York}
 }
