--- a/references.bib
+++ b/references.bib
@@ -1,30 +1,48 @@
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical
-           Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2019},
-  url = {https://www.R-project.org},
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT press}
 }
-
-@book{efr2008,
-  title={Nonparametric Curve Estimation: Methods, Theory, and Applications},
-  author={Efromovich, S.},
-  isbn={9780387226385},
-  lccn={99013253},
-  series={Springer Series in Statistics},
-  url={https://books.google.com/books?id=mdoLBwAAQBAJ},
-  year={2008},
-  publisher={Springer New York}
-}
-@article{LSTMreview,
+@article{van2020review,
   title={A review on the long short-term memory model},
-  author={Van Houdt, G., Mosquera, C., & Nápoles, G.},
+  author={Van Houdt, Greg and Mosquera, Carlos and N{\'a}poles, Gonzalo},
   journal={Artificial Intelligence Review},
   volume={53},
-  number={53},
   pages={5929--5955},
   year={2020},
-  publisher={Springer New York}
+  publisher={Springer}
+}
+@article{greff2016lstm,
+  title={LSTM: A search space odyssey},
+  author={Greff, Klaus and Srivastava, Rupesh K and Koutn{\'\i}k, Jan and Steunebrink, Bas R and Schmidhuber, J{\"u}rgen},
+  journal={IEEE transactions on neural networks and learning systems},
+  volume={28},
+  number={10},
+  pages={2222--2232},
+  year={2016},
+  publisher={IEEE}
+}
+@article{gers2001lstm,
+  title={LSTM recurrent networks learn simple context-free and context-sensitive languages},
+  author={Gers, Felix A and Schmidhuber, E},
+  journal={IEEE transactions on neural networks},
+  volume={12},
+  number={6},
+  pages={1333--1340},
+  year={2001},
+  publisher={IEEE}
+}
+@article{chimmula2020time,
+  title={Time series forecasting of COVID-19 transmission in Canada using LSTM networks},
+  author={Chimmula, Vinay Kumar Reddy and Zhang, Lei},
+  journal={Chaos, solitons \& fractals},
+  volume={135},
+  pages={109864},
+  year={2020},
+  publisher={Elsevier}
 }
