--- a/index.qmd
+++ b/index.qmd
@@ -204,8 +204,12 @@ Split dataset into train and test sets
 ```{r}
 mean_temp$order=seq(1, length(mean_temp$date))
 
+# Perform min-max transformation on 'meantemp' column and store in a new column 'transformed'
+mean_temp$transformed <- (mean_temp$meantemp - min(mean_temp$meantemp)) / (max(mean_temp$meantemp) - min(mean_temp$meantemp))
+
+
 N = nrow(mean_temp)
-n = round(N *0.8, digits = 0)
+n = round(N *0.99, digits = 0)
 train = mean_temp[1:n, ]
 test  = mean_temp[(n+1):N,  ]
 
@@ -215,8 +219,8 @@ test  = mean_temp[(n+1):N,  ]
 Transform data to stationary
 
 ```{r}
-diffed = diff(train$meantemp, differences = 1)
-head(diffed)
+#diffed = diff(train$meantemp, differences = 1)
+#head(diffed)
 ```
 
 Generally in LSTM the data needs to be in a supervised learning mode.
@@ -225,28 +229,18 @@ predictor *X*. To achieve this, we transform the series by lagging the
 series and have the value at *time (t−k)* as the input and value at
 *time t* as the output, for a k-step lagged dataset.
 
-```{r}
-X = train$meantemp
-
-# min max transformation
-
-X_std = (X - min(X) ) / (max(X) - min(X))
-X_scaled = X_std * (max(X) - min(X)) + min(X)          # not needed
-
-
-```
 
 ```{r}
-lag_transform <- function(x, k= 1){
-    
-      lagged =  c(rep(NA, k), x[1:(length(x)-k)])
-      DF = as.data.frame(cbind(lagged, x))
-      colnames(DF) <- c( paste0('x-', k), 'x')
-      DF[is.na(DF)] <- 0
-      return(DF)
-}
-supervised = lag_transform(diffed, 1)
-head(supervised)
+# lag_transform <- function(x, k= 1){
+#     
+#       lagged =  c(rep(NA, k), x[1:(length(x)-k)])
+#       DF = as.data.frame(cbind(lagged, x))
+#       colnames(DF) <- c( paste0('x-', k), 'x')
+#       DF[is.na(DF)] <- 0
+#       return(DF)
+# }
+# supervised = lag_transform(diffed, 1)
+# head(supervised)
 ```
 
 
@@ -254,47 +248,47 @@ head(supervised)
 
 
 ```{r}
-scale_data = function(train, test, feature_range = c(0, 1)) {
-  x = train
-  fr_min = feature_range[1]
-  fr_max = feature_range[2]
-  std_train = ((x - min(x) ) / (max(x) - min(x)  ))
-  std_test  = ((test - min(x) ) / (max(x) - min(x)  ))
-  
-  scaled_train = std_train *(fr_max -fr_min) + fr_min
-  scaled_test = std_test *(fr_max -fr_min) + fr_min
-  
-  return( list(scaled_train = as.vector(scaled_train), scaled_test = as.vector(scaled_test) ,scaler= c(min =min(x), max = max(x))) )
-  
-}
+# scale_data = function(train, test, feature_range = c(0, 1)) {
+#   x = train
+#   fr_min = feature_range[1]
+#   fr_max = feature_range[2]
+#   std_train = ((x - min(x) ) / (max(x) - min(x)  ))
+#   std_test  = ((test - min(x) ) / (max(x) - min(x)  ))
+#   
+#   scaled_train = std_train *(fr_max -fr_min) + fr_min
+#   scaled_test = std_test *(fr_max -fr_min) + fr_min
+#   
+#   return( list(scaled_train = as.vector(scaled_train), scaled_test = as.vector(scaled_test) ,scaler= c(min =min(x), max = max(x))) )
+#   
+# }
 
 
-Scaled = scale_data(train$meantemp, test$meantemp, c(-1, 1))
+#Scaled = scale_data(train$meantemp, test$meantemp, c(-1, 1))
 
-y_train = Scaled$scaled_train
+y_train = train$transformed
 x_train = train$order
 
-y_test = Scaled$scaled_test
+y_test = test$transformed
 x_test = test$order
 ```
 
 
 ```{r}
-invert_scaling = function(scaled, scaler, feature_range = c(0, 1)){
-  min = scaler[1]
-  max = scaler[2]
-  t = length(scaled)
-  mins = feature_range[1]
-  maxs = feature_range[2]
-  inverted_dfs = numeric(t)
-  
-  for( i in 1:t){
-    X = (scaled[i]- mins)/(maxs - mins)
-    rawValues = X *(max - min) + min
-    inverted_dfs[i] <- rawValues
-  }
-  return(inverted_dfs)
-}
+# invert_scaling = function(scaled, scaler, feature_range = c(0, 1)){
+#   min = scaler[1]
+#   max = scaler[2]
+#   t = length(scaled)
+#   mins = feature_range[1]
+#   maxs = feature_range[2]
+#   inverted_dfs = numeric(t)
+#   
+#   for( i in 1:t){
+#     X = (scaled[i]- mins)/(maxs - mins)
+#     rawValues = X *(max - min) + min
+#     inverted_dfs[i] <- rawValues
+#   }
+#   return(inverted_dfs)
+# }
 ```
 
 ### Statistical Modeling
@@ -341,7 +335,7 @@ Predictions
 
 ```{r}
 L = length(x_test)
-scaler = Scaled$scaler
+#scaler = Scaled$scaler
 predictions = numeric(L)
 
 for(i in 1:L){
@@ -349,9 +343,9 @@ for(i in 1:L){
      dim(X) = c(1,1,1)
      yhat = model %>% predict(X, batch_size=batch_size)
      # invert scaling
-     yhat = invert_scaling(yhat, scaler,  c(-1, 1))
+     #yhat = invert_scaling(yhat, scaler,  c(-1, 1))
      # invert differencing
-     yhat  = yhat + mean_temp$meantemp[(n+i)]
+     #yhat  = yhat + mean_temp$meantemp[(n+i)]
      # store
      predictions[i] <- yhat
 }
@@ -359,9 +353,77 @@ for(i in 1:L){
 
 ```{r}
 
+
 final <- data.frame(y_test, predictions)
+final$converted = final$predictions * ( max(mean_temp$meantemp) - min(mean_temp$meantemp) ) + min(mean_temp$meantemp)
+final$original = test$meantemp 
+final$date = test$date
+#final <- invert_scaling(predictions, scaler)
 
 ```
+
+```{r}
+
+ggplot(data = final) +
+  geom_line( aes(x = date, y = original), color = "blue") +
+  geom_line( aes(x = date, y = converted), color = "red") +
+  labs(x = "Date", y = "Original Temperature") +
+  ggtitle("Original Temperature Over Time") +
+  theme(plot.title = element_text(hjust = 0.5))
+
+
+```
+```{r}
+
+final$diff=(final$original-final$converted)**2
+
+MSE=sum(final$diff)/length(final$diff)
+
+```
+
+
+
+
+```{R}
+library(TSLSTM)
+
+ts.lstm(
+  ts=mean_temp$transformed,
+  tsLag=1,
+  xreg=NULL,
+  LSTMUnits,
+  DropoutRate=0,
+  Epochs=10,
+  CompLoss='mse',
+  CompMetrics="mae",
+  activationFn='tanh',
+  SplitRatio=0.8,
+  validationSplit=0.1
+)
+```
+
+
+```{r}
+
+ts_data <- ts(mean_temp$transformed)
+
+# Load the 'TSLSTM' package
+library(TSLSTM)
+
+# Use the ts.lstm function with the ts object
+result <- ts.lstm(
+  ts = ts_data,
+  tsLag = 1,
+  xreg = NULL,
+  LSTMUnits = 1,
+  DropoutRate = 0,
+  Epochs = 10,
+  CompLoss = 'mse',
+  CompMetrics = "mae"
+)
+
+```
+
 ### Conclusion
 
 ### Useful Links
