--- a/index.qmd
+++ b/index.qmd
@@ -207,21 +207,8 @@ mean_temp$order=seq(1, length(mean_temp$date))
 # Perform min-max transformation on 'meantemp' column and store in a new column 'transformed'
 mean_temp$transformed <- (mean_temp$meantemp - min(mean_temp$meantemp)) / (max(mean_temp$meantemp) - min(mean_temp$meantemp))
 
-
-N = nrow(mean_temp)
-n = round(N *0.99, digits = 0)
-train = mean_temp[1:n, ]
-test  = mean_temp[(n+1):N,  ]
-
-
 ```
 
-Transform data to stationary
-
-```{r}
-#diffed = diff(train$meantemp, differences = 1)
-#head(diffed)
-```
 
 Generally in LSTM the data needs to be in a supervised learning mode.
 That is done by having at least 2 variable: target variable *Y* and
@@ -230,199 +217,61 @@ series and have the value at *time (t−k)* as the input and value at
 *time t* as the output, for a k-step lagged dataset.
 
 
-```{r}
-# lag_transform <- function(x, k= 1){
-#     
-#       lagged =  c(rep(NA, k), x[1:(length(x)-k)])
-#       DF = as.data.frame(cbind(lagged, x))
-#       colnames(DF) <- c( paste0('x-', k), 'x')
-#       DF[is.na(DF)] <- 0
-#       return(DF)
-# }
-# supervised = lag_transform(diffed, 1)
-# head(supervised)
-```
-
-
-
-
-
-```{r}
-# scale_data = function(train, test, feature_range = c(0, 1)) {
-#   x = train
-#   fr_min = feature_range[1]
-#   fr_max = feature_range[2]
-#   std_train = ((x - min(x) ) / (max(x) - min(x)  ))
-#   std_test  = ((test - min(x) ) / (max(x) - min(x)  ))
-#   
-#   scaled_train = std_train *(fr_max -fr_min) + fr_min
-#   scaled_test = std_test *(fr_max -fr_min) + fr_min
-#   
-#   return( list(scaled_train = as.vector(scaled_train), scaled_test = as.vector(scaled_test) ,scaler= c(min =min(x), max = max(x))) )
-#   
-# }
-
-
-#Scaled = scale_data(train$meantemp, test$meantemp, c(-1, 1))
-
-y_train = train$transformed
-x_train = train$order
-
-y_test = test$transformed
-x_test = test$order
-```
-
-
-```{r}
-# invert_scaling = function(scaled, scaler, feature_range = c(0, 1)){
-#   min = scaler[1]
-#   max = scaler[2]
-#   t = length(scaled)
-#   mins = feature_range[1]
-#   maxs = feature_range[2]
-#   inverted_dfs = numeric(t)
-#   
-#   for( i in 1:t){
-#     X = (scaled[i]- mins)/(maxs - mins)
-#     rawValues = X *(max - min) + min
-#     inverted_dfs[i] <- rawValues
-#   }
-#   return(inverted_dfs)
-# }
-```
-
 ### Statistical Modeling
 
 ```{r}
-dim(x_train) <- c(length(x_train), 1, 1)
+# this code runs on Nitul's computer, but gives error in Fariha's.
 
+# library(TSLSTM)
+# 
+# df <- mean_temp
+# 
+# df$date<-as.Date(df$date)
+# 
+# TSLSTM<-ts.lstm(ts=df$transformed,
+#                 tsLag=5,
+#                 LSTMUnits=7,
+#                 DropoutRate = 0.1,
+#                 Epochs = 10,
+#                 CompLoss = "mse",
+#                 CompMetrics = "mae",
+#                 ActivationFn = "tanh",
+#                 SplitRatio = 0.99,
+#                 ValidationSplit = 0.2)
+# 
+# #Return function
+# trainFittedValue <- TSLSTM$TrainFittedValue
+# testPredictedValue <- TSLSTM$TestPredictedValue
+# accuracyTable <- TSLSTM$AccuracyTable
+# 
+# Result<-tail(df,15)
+# 
+# Result$S_pred<-testPredictedValue
+# 
+# Result$Prediction= Result$S_pred * ( max(df$meantemp) - min(df$meantemp) ) + min(df$meantemp)
 
-X_shape2 = dim(x_train)[2]
-X_shape3 = dim(x_train)[3]
-batch_size = 1                # must be a common factor of both the train and test samples
-units = 1                     # can adjust this, in model tuninig phase
-
-model <- keras_model_sequential() 
-model%>%
-  layer_lstm(units, batch_input_shape = c(batch_size, X_shape2, X_shape3), stateful= TRUE)%>%
-  layer_dense(units = 1)
-```
-
-Compiling the model
-
-```{r}
-model %>% compile(
-  loss = 'mean_squared_error',
-  optimizer = optimizer_adam( learning_rate = 0.02),  ##  optimizer = optimizer_adam( learning_rate = 0.02, decay = 1e-6 ), 
-  metrics = c('accuracy')
-)
-```
-
-```{r}
-summary(model)
-```
-
-```{r}
-
-Epochs = 50   
-for(i in 1:Epochs ){
-  model %>% fit(x_train, y_train, epochs=1, batch_size=batch_size, verbose=1, shuffle=FALSE)
-  model %>% reset_states()
-}
-```
-
-Predictions
-
-```{r}
-L = length(x_test)
-#scaler = Scaled$scaler
-predictions = numeric(L)
-
-for(i in 1:L){
-     X = x_test[i]
-     dim(X) = c(1,1,1)
-     yhat = model %>% predict(X, batch_size=batch_size)
-     # invert scaling
-     #yhat = invert_scaling(yhat, scaler,  c(-1, 1))
-     # invert differencing
-     #yhat  = yhat + mean_temp$meantemp[(n+i)]
-     # store
-     predictions[i] <- yhat
-}
-```
-
-```{r}
-
-
-final <- data.frame(y_test, predictions)
-final$converted = final$predictions * ( max(mean_temp$meantemp) - min(mean_temp$meantemp) ) + min(mean_temp$meantemp)
-final$original = test$meantemp 
-final$date = test$date
-#final <- invert_scaling(predictions, scaler)
 
 ```
 
+
+
+
+
 ```{r}
 
-ggplot(data = final) +
-  geom_line( aes(x = date, y = original), color = "blue") +
-  geom_line( aes(x = date, y = converted), color = "red") +
+result = read.csv("Result.csv")
+
+result$date <- as.Date(result$date)
+
+ggplot(data = result) +
+  geom_line( aes(x = date, y = meantemp), color = "blue") +
+  geom_line( aes(x = date, y = Prediction), color = "red") +
   labs(x = "Date", y = "Original Temperature") +
   ggtitle("Original Temperature Over Time") +
   theme(plot.title = element_text(hjust = 0.5))
 
-
-```
-```{r}
-
-final$diff=(final$original-final$converted)**2
-
-MSE=sum(final$diff)/length(final$diff)
-
 ```
 
-
-
-
-```{R}
-library(TSLSTM)
-
-ts.lstm(
-  ts=mean_temp$transformed,
-  tsLag=1,
-  xreg=NULL,
-  LSTMUnits,
-  DropoutRate=0,
-  Epochs=10,
-  CompLoss='mse',
-  CompMetrics="mae",
-  activationFn='tanh',
-  SplitRatio=0.8,
-  validationSplit=0.1
-)
-```
-
-
-```{r}
-
-ts_data <- ts(mean_temp$transformed)
-
-# Load the 'TSLSTM' package
-library(TSLSTM)
-
-# Use the ts.lstm function with the ts object
-result <- ts.lstm(
-  ts = ts_data,
-  tsLag = 1,
-  xreg = NULL,
-  LSTMUnits = 1,
-  DropoutRate = 0,
-  Epochs = 10,
-  CompLoss = 'mse',
-  CompMetrics = "mae"
-)
-
-```
 
 ### Conclusion
 
