--- a/index.qmd
+++ b/index.qmd
@@ -15,19 +15,47 @@ editor:
 
 ## Introduction
 
-Recurrent networks can in principle use their feedback connections to
-store representations of recent input events in form of activation's
-("short-term memory", as opposed to "long-term memory embodied by slowly
-changing weights). The most widely used algorithms for learning what to
-put in short-term memory, however, take too much time or do not work
-well at all, especially when minimal time lags between inputs and
-corresponding teacher signals are long. With
-conventional"Back-Propagation Through Time" or "Real-Time Recurrent
+Recurrent Neural Networks (RNNs) are one of the most popular data-driven
+approaches used for time-series prediction. RNNs benefit from feedback
+loops which makes the output of RNN in one time step to be seen as an
+input in the subsequent one. Having information in a sequential form,
+the input of the RNN in each time step includes the information of the
+corresponding time step in the sequence and the previous information
+provided by a feedback loop[@karevan2020transductive]. A RNN maintains a
+memory based on history information, which enables the model to predict
+the current output conditioned on long distance
+features[@huang2015bidirectional].Recurrent networks can in principle
+use their feedback connections to store representations of recent input
+events in form of activation's ("short-term memory", as opposed to
+"long-term memory embodied by slowly changing weights). The most widely
+used algorithms for learning what to put in short-term memory, however,
+take too much time or do not work well at all, especially when minimal
+time lags between inputs and corresponding teacher signals are long.
+With conventional"Back-Propagation Through Time" or "Real-Time Recurrent
 Learning", error signals "flowing backwards in time" tend to either (1)
 blow up or (2) vanish: the temporal evolution of the back-propagated
 error exponentially depends on the size of the weights. Case (1) may
 lead to oscillating weights, while in case (2) learning to bridge long
 time lags takes a prohibitive amount of time, or does not work at all.
+
+Recurrent Neural Networks, often shortened to RNNs, are a class of
+neural networks which exhibit temporal behavior due to directed
+connections between units of an individual layer. Recurrent neural
+
+networks maintain a hidden vector **h**, which is updated at time step
+*t* as follows:
+
+$$ h_t = tanh(Wh_{t-1}+Ix_t)$$ where tanh is the hyperbolic tangent
+function. **W** is the recurrent weight matrix and **I** is a projection
+matrix. The hidden state **h** is used to make a prediction
+
+$$y_t = softmax(Wh_{t-1})$$ where softmax provides a normalized
+probability distribution over the possible classes, $\sigma$ is the
+logistic sigmoid function and **W** is a weight matrix. By using **h**
+as the input to another RNN, we can stack RNNs, creating deeper
+architectures[@karim2017lstm].
+$$h^l_t = \sigma(Wh^l_{t-1} + Ih^{l-1}_t)$$
+
 Long Short-Term Memory(LSTM), a novel recurrent network architecture in
 conjunction with an appropriate gradient based learning algorithm comes
 up as a remedy to solve this problem. It can learn to bridge time
@@ -47,26 +75,49 @@ applied to many learning problems which differ significantly in scale
 and nature from the problems that these improvements were initially
 tested on[@greff2016lstm].
 
-A large part of real-world datasets are temporal in nature. Due to its
-distinctive properties, there are numerous unsolved problems with wide
-range of applications. Data collected over regular intervals of time is
-called time-series (TS) data and each data point is equally spaced over
-time. TS prediction is the method of forecasting upcoming
-trends/patterns of the given historical dataset with temporal features.
-A time series (TS) data can be break downed into trend, seasonality and
-error. A trend in TS can be observed when a certain pattern repeats on
-regular intervals of time due to external factors. In many real world
-scenarios, either of trend or seasonality are absent. After finding the
-nature of TS, various forecasting methods have to be applied on given
-TS. Given the TS, it is broadly classified into 2 categories i.e.
-stationary and non-stationary. A series is said to be stationary, if it
-does not depend on the time components like trend, seasonality effects.
-Mean and variances of such series are constant with respect to time.
-Stationary TS is easier to analyze and results skillful forecasting. A
-TS data is said to non-stationary if it has trend, seasonality effects
-in it and changes with respect to time. Statistical properties like
-mean, variance, sand standard deviation also changes with respect to
-time[@chimmula2020time].
+Due to information explosion in recent years, a large amount of data has
+become available online and manually analyzing this data is not
+feasible. Various supervised and unsupervised machine learning
+techniques have been developed to automatically gather and analyze data
+and make predictions. Deep learning techniques have become the hottest
+tool delivering state-of-the art results in areas as diverse as computer
+vision, speech recognition and NLP problems. But deep learning
+techniques also present a unique set of challenges. The performance of
+deep learning models depends upon a number of parameters called
+hyper-parameters. Hyper-parameters are manually set training variables
+which are determined before training the model. Some automatic
+techniques for tuning hyper-parameters have been proposed but these
+methods don't provide insight to the end-users about the interactions
+between different hyper-parameters and their relative importance. For
+the deep learning model used in this paper, namely LSTM, the important
+hyper-parameters are activation function (sigmoid, tanh, softmax etc.),
+optimizer (Adam, Adadelta, RMSprop etc.), batch size, number of epochs,
+number of hidden layers etc. LSTM can be stateful or
+stateless[@yadav2020optimizing].
+
+A critical area of machine learning is Time Series forecasting, as
+various forecasting problems contain a time component. It is one of the
+most applied data science technique in business, supply chain
+management, and production. A series of observations taken
+chronologically in time is known as a Time Series(TS). A time-series dataset
+is different from other datasets, as it adds a time element. This added
+element is both a limitation and a structure that offers an additional
+source of information[@yamak2019comparison]. TS prediction is the method of forecasting
+upcoming trends/patterns of the given historical dataset with temporal
+features. A time series (TS) data can be break downed into trend,
+seasonality and error. A trend in TS can be observed when a certain
+pattern repeats on regular intervals of time due to external factors. In
+many real world scenarios, either of trend or seasonality are absent.
+After finding the nature of TS, various forecasting methods have to be
+applied on given TS. Given the TS, it is broadly classified into 2
+categories i.e. stationary and non-stationary. A series is said to be
+stationary, if it does not depend on the time components like trend,
+seasonality effects. Mean and variances of such series are constant with
+respect to time. Stationary TS is easier to analyze and results skillful
+forecasting. A TS data is said to non-stationary if it has trend,
+seasonality effects in it and changes with respect to time. Statistical
+properties like mean, variance, sand standard deviation also changes
+with respect to time[@chimmula2020time].
 
 ## Methods
 
@@ -199,7 +250,8 @@ ggplot(mean_temp, aes(x = date, y = meantemp)) +
   ggtitle("Mean Temperature Over Time") +
   theme(plot.title = element_text(hjust = 0.5))
 ```
-Split dataset into train and test sets
+
+Performing Min Max Transformations on the dataset
 
 ```{r}
 mean_temp$order=seq(1, length(mean_temp$date))
@@ -208,14 +260,6 @@ mean_temp$order=seq(1, length(mean_temp$date))
 mean_temp$transformed <- (mean_temp$meantemp - min(mean_temp$meantemp)) / (max(mean_temp$meantemp) - min(mean_temp$meantemp))
 
 ```
-
-
-Generally in LSTM the data needs to be in a supervised learning mode.
-That is done by having at least 2 variable: target variable *Y* and
-predictor *X*. To achieve this, we transform the series by lagging the
-series and have the value at *time (t−k)* as the input and value at
-*time t* as the output, for a k-step lagged dataset.
-
 
 ### Statistical Modeling
 
@@ -230,7 +274,7 @@ library(TSLSTM)
                  tsLag=5,
                  LSTMUnits=7,
                  DropoutRate = 0.1,
-                 Epochs = 10,
+                 Epochs = 20,
                  CompLoss = "mse",
                  CompMetrics = "mae",
                  ActivationFn = "tanh",
@@ -249,20 +293,27 @@ library(TSLSTM)
  Result$Prediction= Result$S_pred * ( max(df$meantemp) - min(df$meantemp) ) + min(df$meantemp)
 ```
 
-
-
-
+Plotting the Actual vs Predicted values in one visualization.
 
 ```{r}
-Result$date <- as.Date(Result$date)
-ggplot(data = Result) +
-  geom_line( aes(x = date, y = meantemp), color = "blue") +
-  geom_line( aes(x = date, y = Prediction), color = "red") +
-  labs(x = "Date", y = "Original Temperature") +
-  ggtitle("Original Temperature Over Time") +
-  theme(plot.title = element_text(hjust = 0.5))
-```
+# Calculate label positions
+label_pos <- data.frame(label = c("Original", "Prediction"),
+                        y = c(max(Result$meantemp), max(Result$Prediction)),
+                        label_color = c("blue", "red"))
 
+ggplot(data = Result) +
+  geom_line(aes(x = date, y = meantemp), color = "blue") +
+  geom_line(aes(x = date, y = Prediction), color = "red") +
+  labs(x = "Date", y = "Mean Temperature (°C)",  # Updated y-axis label with units
+       title = "Original Temperature Over Time") +  # Plot title
+  annotate("text", x = max(Result$date) + 1, y = label_pos$y, 
+           label = label_pos$label, color = label_pos$label_color, vjust = 0.5) +
+  theme(axis.text.y = element_text(size = 12),   # Set font size for y-axis tick labels
+        axis.title.y = element_text(size = 14),  # Set font size for y-axis label
+        axis.text.x = element_text(size = 12),   # Set font size for x-axis tick labels
+        axis.title.x = element_text(size = 14),  # Set font size for x-axis label
+        plot.title = element_text(size = 16, hjust = 0.5))  # Set font size for plot title
+```
 
 ### Conclusion
 
