--- a/references.bib
+++ b/references.bib
@@ -46,3 +46,43 @@
   year={2020},
   publisher={Elsevier}
 }
+@article{yadav2020optimizing,
+  title={Optimizing LSTM for time series prediction in Indian stock market},
+  author={Yadav, Anita and Jha, CK and Sharan, Aditi},
+  journal={Procedia Computer Science},
+  volume={167},
+  pages={2091--2100},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{karim2017lstm,
+  title={LSTM fully convolutional networks for time series classification},
+  author={Karim, Fazle and Majumdar, Somshubra and Darabi, Houshang and Chen, Shun},
+  journal={IEEE access},
+  volume={6},
+  pages={1662--1669},
+  year={2017},
+  publisher={IEEE}
+}
+@article{karevan2020transductive,
+  title={Transductive LSTM for time-series prediction: An application to weather forecasting},
+  author={Karevan, Zahra and Suykens, Johan AK},
+  journal={Neural Networks},
+  volume={125},
+  pages={1--9},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{huang2015bidirectional,
+  title={Bidirectional LSTM-CRF models for sequence tagging},
+  author={Huang, Zhiheng and Xu, Wei and Yu, Kai},
+  journal={arXiv preprint arXiv:1508.01991},
+  year={2015}
+}
+@inproceedings{yamak2019comparison,
+  title={A comparison between arima, lstm, and gru for time series forecasting},
+  author={Yamak, Peter T and Yujian, Li and Gadosey, Pius K},
+  booktitle={Proceedings of the 2019 2nd international conference on algorithms, computing and artificial intelligence},
+  pages={49--55},
+  year={2019}
+}
